web-demo/templates/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        command: ["/bin/bash","-c"]
        args:
        - "exec /docker-entrypoint.sh nginx -g 'daemon off;'"
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
      - name: nginx-sidecar
        image: busybox:1.37.0-musl
        command: ["/bin/sh"]
        args: ["-c","exec tail -f /dev/null"]
        volumeMounts:
        - name: nginx-html
          mountPath: /nginx-html
        - name: config-vol
          mountPath: /config
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
          requests:
            memory: "256Mi"
            cpu: "100m"
      volumes:
      - name: config-vol
        configMap:
          name: my-config-map
          items:
          - key: init-script-sh
            path: init-script.sh
      - name: nginx-html
        emptyDir: {}
