web-demo/templates/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod
  labels:
    name: httpd-pod
spec:
  containers:
  - name: httpd
    image: httpd:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "200m"
      requests:
        memory: "128Mi"
        cpu: "200m"
    ports:
      - containerPort: 80
