web-demo/templates/ingress.yaml
# Testing:
#   $ cat /etc/hosts
#   <ip-address> nginx.local httpd.local
#   https://nginx.local
#   https://httpd.local

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web-demo
  labels:
    name: web-ingress
spec:
  rules:
  - host: nginx.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: httpd.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpd-service
            port:
              number: 80
